--- a/frontend/src/app/dashboard/rfq/rfq.component.html
+++ b/frontend/src/app/dashboard/rfq/rfq.component.html
@@ -58,7 +58,7 @@
         </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let rfq of rfqs">
+          <tr *ngFor="let rfq of filteredRfqs">
             <td>{{ rfq.Lifnr }}</td>
             <td>{{ rfq.Ebelp }}</td>
             <td>{{ rfq.Matnr }}</td>
