home dash updated

--- a/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -56,11 +56,12 @@
           [showXAxisLabel]="true"
           [showYAxisLabel]="true"
           xAxisLabel="Month"
-          yAxisLabel="Deliveries"
+          yAxisLabel="Goods Receipts"
           [animations]="true"
           [timeline]="true"
           [showGridLines]="true">
         </ngx-charts-line-chart>
+
       </div>  
     </section>
 
