--- a/frontend/src/app/dashboard/rfq/rfq.component.css
+++ b/frontend/src/app/dashboard/rfq/rfq.component.css
@@ -22,12 +22,7 @@
   font-size: 1.9rem;
   font-weight: 600;
   color: var(--header-bg);
-<<<<<<< HEAD
-  margin-right: 10px;
-=======
-  
-  
->>>>>>> a30bb0c3a3c1a289cc24d72c364490ed533f3621
+  text-align: left;
 }
 
 /* Filters container */
@@ -36,7 +31,7 @@
   gap: 15px;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-around;
 }
 
 /* Individual label */
