--- a/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -38,7 +38,9 @@
         [explodeSlices]="false"
         [labels]="true"
         [doughnut]="true"
-        [scheme]="colorSchemePO">
+        [scheme]="colorSchemePO"
+        [arcWidth]="0.3"
+        [animations]="true">
       </ngx-charts-pie-chart>
        </div>
     </section>
